syntax = "proto3";
package hello;

import "shared.proto";

service HelloService {
  rpc Hello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  optional string name = 1;
}

// return value
message HelloResponse {
  string message = 1;
  shared.SillyPayload payload = 2;
}
